# notes

./: .gitignore  .gitmodules  LICENSE  README.md  keyboard_enable.sh
Fun_Projects/RJJE_Arm/: .bash_history  .viminfo  Dockerfile  Project_Notes.md  dockint
Fun_Projects/RJJE_Arm/rjje_arm_ws/src/rjje_arm/: CMakeLists.txt  Project_Notes.md  package.xml
Fun_Projects/RJJE_Arm/rjje_arm_ws/src/rjje_arm/launch/: rjje_arm.launch
Fun_Projects/RJJE_Arm/rjje_arm_ws/src/rjje_arm/meshes/: base.stl  cup_holder.stl  left_gripper.stl  motor_and_frame.stl  right_gripper.stl  thin_bracket.stl
Fun_Projects/RJJE_Arm/rjje_arm_ws/src/rjje_arm/rviz/: rjje_arm.rviz
Fun_Projects/RJJE_Arm/rjje_arm_ws/src/rjje_arm/scripts/: build_and_launch.sh  pi_control.py  ssh-tool.sh
Fun_Projects/RJJE_Arm/rjje_arm_ws/src/rjje_arm/urdf/: box.xacro  box.xacro.urdf  definitions.xacro  rjje_arm.xacro  rjje_arm.xacro.urdf  robotic_arm.urdf
Fun_Projects/Security_Camera/: Development_Notes.md  camera_default.sh  camshift.py  read_webcam.py  sample_code.ino  webcam-udev.rules
Fun_Projects/face_tracker/: CMakeLists.txt  face_tracker.cpp  face_tracker_notes.md  pf_face_tracker.py
Fun_Projects/face_tracker/include/: particle_filter.hpp
Fun_Projects/filter_projects/filters/gtest/: CMakeLists.txt  particle_filter_test.cc
Fun_Projects/filters/: CMakeLists.txt  particle_filter.cpp
cmake_examples/CUDA_example/histogram_counter_lib/: CMakeLists.txt
cmake_examples/CUDA_example/histogram_counter_lib/include/: histogram_counter.cuh  jpeg_reader.hpp
cmake_examples/proj/Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m7l2_Installation_Process_of_Packages/my_math/: CMakeLists.txt
cmake_examples/proj/Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m7l3_Exporting_a_Package/: CMakeLists.txt
cmake_examples/proj/Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m7l3_Exporting_a_Package/my_math/: CMakeLists.txt
cmake_examples/proj/Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m7l4_Using_a_3rd_party_Package_in_our_Project/test/: CMakeLists.txt
cmake_examples/proj/Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m9l3_App_OpenCV/: CMakeLists.txt
cmake_examples/proj/Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m9l4_GTK_PC/: CMakeLists.txt
cmake_examples/proj/Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m9l6_GTK_FindModule/: CMakeLists.txt
cmake_examples/proj/Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m9l6_GTK_FindModule/cmake/modules/: FindGTK3.cmake
cmake_examples/static_lib_example/: CMakeLists.txt  build_proj.sh
dot_files/: .vimrc  README.md  bashrc  clang_format  coc-install.sh  coc-settings.json  install_rico.sh  terminator_config  vimrc
examples/bash_examples/: bash_basics.sh  complete_script_to_source.bash  george_script.sh
examples/c++_examples/: .ccls  Acc_C++_chap1.cpp  Acc_C++_chap3.cpp  array.cpp  auto.cpp  cast.cpp  chrono.cpp  const.cpp  constexpr.cpp  crash.cpp  crash_exceptions.cpp  dynamic.cpp  enum.cpp  file.cpp  inheritance.cpp  initializer_list.cpp  iterator.cpp  map_family.cpp  multimap.cpp  oop.cpp  oop_array.cpp  perfect_forwarding.cpp  priority_queue.cpp  promise.cpp  random.cpp  reference.cpp  rico_map_data_structures.cpp  sample.py  static.cpp  stdarray.cpp  stdvector.cpp  string.cpp  stringstream.cpp  template.cpp  this_ptr.cpp  tuple.cpp  type_misc.cpp  type_store.cpp  typedef.cpp  union.cpp  (+1 more)
examples/c_examples/: inter_process_c.c  inter_process_p.c
examples/cmake_examples/proj/Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m2l6_FAQ_on_Targets/: CMakeLists.txt
examples/cmake_examples/static_lib_example/histogram_counter_lib/: CMakeLists.txt  histogram_counter_lib.cpp
examples/cmake_examples/static_lib_example/histogram_counter_lib/include/: rico.hpp
examples/cmake_examples/static_lib_example/test_src/: CMakeLists.txt
examples/database_examples/: database_notes.md
examples/docker_examples/: Dockerfile_1
examples/js_examples/: js_notes.md
examples/julia_examples/: hello_world.jl
examples/machine_learning_examples/: simple_deep_net.py
examples/node_js_examples/: hello_world.ts  js_notes.md  node_js_notes.md  react_notes.md
examples/proto_examples/: example.proto  example_pb2.py  rico_proto_example.py  scalar-types.proto  scalar_types_pb2.py
examples/pybind-example/: CMakeLists.txt  example.cpp
examples/pybind_example/: CMakeLists.txt  example.cpp  example.hpp  test_rico.py
examples/pybind_example/load_shared_obj_test/: load_shared_obj.cpp
examples/python_examples/: advanced_oop.py  context_lib_examples.py  coroutines.ipynb  event.py  exception.py  file_related.ipynb  file_related.py  filter_example.py  functions_basics.ipynb  functions_related.py  io_related.py  iterable_basics.py  iterable_related.py  joinable_queue.py  keywords_related.py  kwargs.py  metaclass.py  misc_topics.py  mixin.py  multi_processing.ipynb  multiprocess.py  multiprocessing.py  multithreading.ipynb  multithreading_process.py  multithreading_related.py  networking.py  np.py  np_any.py  numba_performance_study.ipynb  one_line_if.py  oop.py  open3d_example.py  other_data_structure_related.py  plots.py  plots_logging.py  pool.py  post.py  property.py  pytest  python-cookbook-chap-9-20.ipynb  (+17 more)
examples/ros_examples/src/test_pkg/: CMakeLists.txt  package.xml
examples/ros_examples/src/test_pkg/config/: params.yaml
examples/ros_examples/src/test_pkg/launch/: test_launch.launch  test_multiprocess.launch  test_ros_unit.test
examples/ros_examples/src/test_pkg/msg/: StringList.msg
examples/ros_examples/src/test_pkg/scripts/: basic_ros_examples.py  logger.py  test_basics.py
examples/ros_examples/src/test_pkg/src/: test_pubsub.cpp  test_sub_spin.cpp  test_tf.cpp
examples/ros_examples/src/test_pkg/srv/: Add2Nums.srv
examples/ros_examples/src/test_pkg/test/: test_ros_unit.py
interview_prep/: Manipulation.md
makefile_proj/my_work/: dll.h  (+1 more)
pybind-example/: test_rico.py
(+670 files in other folders)
