<?xml version="1.0"?>
<package format="2">
  <name>rjje_arm</name>
  <version>1.0.0</version>
  <description>rjje_arm</description>
  <maintainer email="ruotongjia2020@u.northwestern.edu">Rico Ruotong JIa</maintainer>
  <license>BSD-1</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>
  
</package>
